# luzlang

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  luz.json  luzc.py  main.py  mkdocs.yml  ray.py  run_examples.py  test_luz.py
.github/workflows/: ci.yml  docs.yml  release-linux.yml  release-notes.yml  release-windows.yml  release.yml
compiler/: .gitignore  CMakeLists.txt  README.md
compiler/c_lexer/: __init__.py  bridge.py  luz_lexer.c
compiler/include/luz/: ast.hpp  ast_printer.hpp  ccodegen.hpp  codegen.hpp  diagnostics.hpp  hir.hpp  lexer.hpp  parser.hpp  token.hpp  typechecker.hpp
compiler/runtime/: luz_rt.c
compiler/src/: ast_printer.cpp  ccodegen.cpp  codegen.cpp  diagnostics.cpp  hir.cpp  lexer.cpp  main.cpp  parser.cpp  typechecker.cpp
compiler/tests/: CMakeLists.txt  test_ccodegen.cpp  test_e2e.cpp  test_hir.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_runner.hpp  test_typechecker.cpp
docs/: architecture.md  builtins.md  c-lexer.md  commands.md  contributing-features.md  download.md  github.md  index.md  language-features.md  patterns.md  stdlib.md
docs/getting-started/: installation.md  usage.md
docs/language/: collections.md  error-handling.md  functions.md  oop.md  operators.md  types.md  variables.md
docs/stdlib/: clock.md  system.md  types.md
examples/: 01_hello_world.luz  02_fizzbuzz.luz  03_fibonacci.luz  04_bubble_sort.luz  05_calculator.luz  06_strings.luz  07_guessing_game.luz  08_primes.luz  09_collections.luz  10_error_handling.luz  11_oop_basics.luz  12_inheritance.luz  13_format_strings.luz  14_math_builtins.luz  15_foreach_and_null.luz  16_closures.luz  17_lambdas.luz  18_bound_methods.luz  19_dot_methods.luz  20_data_structures.luz  21_algorithms.luz  22_nullable_types.luz  23_structs.luz  24_fixed_types.luz  25_switch_match.luz  26_slices.luz  27_advanced_functions.luz  28_type_system.luz
installer/: luz_installer.iss
libs/luz-clock/: moment_class.luz
libs/luz-func/: compose.luz  func.luz  higher.luz  luz.json  partial.luz
libs/luz-io/: csv.luz  files.luz  io.luz  (+1 more)
luz/: codegen.py  exceptions.py  hir.py  interpreter.py  lexer.py  parser.py  tokens.py  typechecker.py
tests/: test_suite.py
vscode-luz/: package.json
(+35 files in other folders)
